[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Surveillant.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Sensor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/127/Surveillant.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Patrolman.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/music/KSHMR_Game_FX_02_Alarm_D#.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Active"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("ActiveSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.393483,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 117.516

[sub_resource type="CircleShape2D" id=5]
radius = 539.796

[node name="Surveillant" instance=ExtResource( 1 )]
script = ExtResource( 2 )
interval = 3.0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 5 )
hframes = 3

[node name="AnimationPlayer" parent="." index="1"]
anims/Active = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2( 1, -1 )
shape = SubResource( 4 )

[node name="Spawner" parent="." index="6" instance=ExtResource( 4 )]
scene = ExtResource( 6 )

[node name="Sensor" parent="." index="7" instance=ExtResource( 3 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Sensor" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="." index="8"]
one_shot = true

[node name="ActiveSFX" type="AudioStreamPlayer" parent="." index="11"]
stream = ExtResource( 7 )

[node name="ActiveSFX" type="AudioStreamPlayer" parent="ActiveSFX" index="0"]

[connection signal="area_entered" from="Sensor" to="." method="_on_Sensor_area_entered"]
[connection signal="area_exited" from="Sensor" to="." method="_on_Sensor_area_exited"]
[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_Sensor_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Spawner"]
[editable path="Sensor"]
